[project]
name = "circuit-tracer"
version = "0.1.0"
description = "Library for circuit tracing in language models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "einops>=0.8.0",
    "huggingface_hub<1.0.0",
    "ipykernel>=6.29.5,<7.0.0",
    "ipywidgets>=8.1.7",
    "nnsight>=0.5.13",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "safetensors>=0.5.0",
    "seaborn>=0.13.2",
    "streamlit>=1.32.0",
    "tokenizers>=0.21.0",
    "torch>=2.0.0",
    "tqdm>=4.60.0",
    "transformer-lens>=2.16.0",
    "transformers>=4.56.0,<=4.57.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.12.7", "pyright>=1.1.403", "ipython>=8.37.0"]
viz = ["graphviz>=0.20.3"]

[project.scripts]
circuit-tracer = "circuit_tracer.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
exclude = ["*.ipynb", "demos"]

[tool.ruff.lint]
select = ["E", "F", "TID"]
ignore = ["E501"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"typing.Union".msg = "Use `|` instead"
"typing.Optional".msg = "Use `| None` instead"
"typing.Dict".msg = "Use `dict` instead"
"typing.Tuple".msg = "Use `tuple` instead"
"typing.List".msg = "Use `list` instead"

[tool.pyright]
typeCheckingMode = "basic"
exclude = ["**/node_modules", "**/__pycache__", "**/.*", "demos"]

[tool.pytest.ini_options]
markers = [
    "requires_disk: marks tests requiring storage space",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.12.7",
    "pyright>=1.1.403",
]

# Optional: if you install with `uv`, this pins `torch` to the official PyTorch CUDA
# wheel index (instead of PyPI). Adjust/remove if you want CPU-only or macOS installs.
[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu126" },
]
